--- a/ProjectArse/ProjectMarse.csproj
+++ b/ProjectArse/ProjectMarse.csproj
@@ -51,6 +51,9 @@
   <PropertyGroup />
   <PropertyGroup />
   <ItemGroup>
+    <Reference Include="EV3WifiLib">
+      <HintPath>..\EV3WifiLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
